@@ -2,6 +2,14 @@
 
 	Patch from Tambet Ingo <tambet@gmail.com>
 
+	* src/applet-device-wired.c
+	  src/connection-editor/page-dsl.c
+		- Use pppoe setting accessors
+
+2008-10-26  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Tambet Ingo <tambet@gmail.com>
+
 	* src/connection-editor/ce-page.c
 	  src/connection-editor/ce-page.h
 	  src/connection-editor/page-wired.c
